--- a/package.json
+++ b/package.json
@@ -4,14 +4,31 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "rimraf dist && tsc",
+    "start": "nodemon"
+  },
   "dependencies": {
+    "@kerthin/utils": "^0.0.2-0",
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.15",
+    "dotenv-safe": "^8.2.0",
+    "ramda": "^0.27.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.0"
+    "@types/node": "^14.14.41",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.2.4"
   }
 }
