--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,18 @@
   "compilerOptions": {
     "module": "commonjs",
     "declaration": false,
-    // "incremental": true,
+    "incremental": true,
     "noImplicitAny": false,
     "removeComments": true,
     "noLib": false,
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "ES2020",
+    "esModuleInterop": true,
+    "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./src",
+    "baseUrl": "./src"
   },
   "include": [
     "src/**/*.ts"
